# MarketMicrostructureEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
MarketMicrostructureEngine/: CMakeLists.txt
MarketMicrostructureEngine/include/: ScopeTimer.hpp  matching_engine.h  order_book.h  types.h
MarketMicrostructureEngine/include/MarketMicrostructureEngine/: market_data_publisher.h  matching_engine.h  order_book.h  types.h
MarketMicrostructureEngine/src/: market_data_publisher.cpp  matching_engine.cpp  order_book.cpp
MarketMicrostructureSim/: CMakeLists.txt
MarketMicrostructureSim/include/: sim_event_loop.h
MarketMicrostructureSim/src/: main.cpp  sim_event_loop.cpp
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/MarketMicrostructureEngine/: Makefile  cmake_install.cmake
_codeql_build_dir/MarketMicrostructureSim/: Makefile  MarketMicrostructureSim  cmake_install.cmake
include/: HPRingBuffer.hpp  sim_event_loop.h
src/: main.cpp  sim_event_loop.cpp
